# anything2robot

./: .gitignore  LICENSE  README.md  difference_model.scad  env.yml  fea_result.csv  final_model.scad  requirements.txt  test.scad
auto_design/: README.md  auto_design.py  visualize.py
auto_design/model/given_models/: A_strong_Tyrannosauru_scaled_joints.pkl  AustralianCattleDog.stl  BullDog.stl  Cactus_Character_Scaled_joints.pkl  Mario_Character_Image_1020080024.stl  Mario_Character_Image_1020080024_joints.pkl  Mario_Character_Image_1020080024_joints_old.pkl  Mario_Character_Image_1020080024_scaled.stl  bear_rotated_joints.pkl  gold_lynel.stl  (+30 more)
auto_design/modules/: collision_check.py  data_struct.py  destruction_check.py  generic.py  interference_removal.py  load_robot_result.py  mesh_decomp.py  mesh_loader.py  mesh_loader_old.py  motor_opt.py  plot_utils.py  post_analysis.py  quadruped_pose_to_pkl.py  urdf_generator.py  urdf_motor_adding.py
auto_design/paper/: test_result.csv
auto_design/results/: lynel_father_link_dict.pkl  lynel_link_tree.pkl  lynel_motor_results.npy  lynel_motor_results1.npy  lynel_robot_result.pkl
auto_design/tests/: test_contact.py  test_o3d.py  test_plotly.py  test_rnea.py
metamaterial_filling/: CMakeLists.txt  box_mesh.stl  difference_model.scad  final_model.scad  readme.md
metamaterial_filling/include/: meshFilling.h
metamaterial_filling/include/CellStructure/: cubicFoam.h
metamaterial_filling/include/igl/: remove_duplicate_vertices.cpp  remove_duplicate_vertices.h
metamaterial_filling/script/: add_inner_cubes.py  example_read_fea_result.py  final_model.scad  input_visualization.scad  simple_force_calculator.py  stl_meta_m_test.py  stl_metamaterial_filling.py  stl_relative_density_fea_opt.py  stl_relative_density_fea_opt_fixed_end.py  user_stl_force_relative_density_fea_opt.py  user_stl_metamaterial_filling_with_tenon.py
metamaterial_filling/script/backup/: stl_relative_density_fea_opt_fixed_end.py
metamaterial_filling/script/format_transform/: off_to_stl.py  stl_to_off.py  vtu_to_ansys_msh.py
metamaterial_filling/script/freecad/: stl_to_iges.py
metamaterial_filling/script/io_interface/: fea_result_class.py  robot_result_compat.py
metamaterial_filling/script/mesh_operations/: create_box.py  create_cylinder.py  mesh_difference.py  meshfix.py  repair_mesh.py  view_mesh.py
metamaterial_filling/script/metamaterial/: generateMeshFromPoints.py  readInnerPointsBin.py  sixFoldPlatesFilling.py  sixFoldPlatesFillingWithShell.py  sixFoldPlatesFillingWithShellTenon.py
metamaterial_filling/script/pyansys_fea/: mapdl_analysis.py  mapdl_msh_analysis.py  mapdl_msh_analysis_fix_end.py  mapdl_msh_analysis_test.py
metamaterial_filling/script/visualization/: assemble_vis.py  mesh_and_vectors_vis.py
metamaterial_filling/src/: checkIfWatertight.cpp  filling.cpp  innerPointsCalculation.cpp  replaceMesh.cpp  rotateMesh.cpp  scaleMesh.cpp  smallModelGeneration.cpp  tetrahedralMeshing.cpp
metamaterial_filling/tenon/: connection_child.stl  connection_father.stl  motor_0_child.stl  motor_0_father.stl  motor_1_child.stl  motor_1_father.stl  motor_2_child.stl  motor_2_father.stl
result/gold_lynel_20241018-154417/: gold_lynel_joints.pkl
script/: animal3d_data_selector.py  auto_design.py  fill_in_metamaterial_for_urdf.py  mesh_downsample.py  mesh_rotation.py  motor_param_lib.py  quadruped_auto_design_test.py  quadruped_success_sample_fea.py  result_analysis.py  run_design.py
script/backup/: test.py
(+88 files in other folders)
